blocks/footer/footer.css
footer {
  padding: 2rem;
  background-color: var(--overlay-background-color);
  font-size: var(--body-font-size-s);
}

footer .footer {
  max-width: 1200px;
  margin: auto;
}

footer .footer p {
  margin: 0;
}

.table-of-contents-what-is-nps-types-of-nps-investment-plans-why-invest-in-nps-top-6-reasons-final-thoughts-frequently-asked-questions-container p{
  margin: 0;
  padding: 0
}

.table-of-contents-what-is-nps-types-of-nps-investment-plans-why-invest-in-nps-top-6-reasons-final-thoughts-frequently-asked-questions-container .default-content-wrapper .blogs-main-heading{
  color: #333;
  font-family: "Inter", sans-serif;
  font-size: 42px;
  line-height: 42px;
  letter-spacing: -1.28px;
  margin-bottom: 0;
}

